namespaces/live.cloud-platform.service.justice.gov.uk/jakemulley-cloud-platform-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jakemulley-cloud-platform-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "jake"
    cloud-platform.justice.gov.uk/application: "jakemulley-cloud-platform-dev"
    cloud-platform.justice.gov.uk/owner: "Hosting and Digital Operations: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/jakemulley-cloud-platform-dev.git"
    cloud-platform.justice.gov.uk/team-name: "webops"
    cloud-platform.justice.gov.uk/review-after: "2021-12-06"
